--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <iframe src="https://discord.com/widget?id=1027016571773788310&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+    <div class="pfpdiv">
+        <br>
+        <img class="pfp" src="assets/pfp.webp" height="240" alt="Server image">
+    </div>
 </body>
 </html>
