--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="pfpdiv">
-        <br>
-        <img class="pfp" src="assets/pfp.webp" height="240" alt="Server image">
+    <div class="container">
+        <div class="pfpdiv">
+            <img class="pfp" src="assets/pfp.webp" height="240" alt="Server image">
+            <div class="bio">
+                <h1>Welcome to <span style="color: rgb(255, 131, 249);"><bold>Blåhaj café</bold></span>!</h1>
+            </div>
+        </div>
     </div>
 </body>
 </html>
