Fix capitalization of café in title and heading

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blåhaj café</title>
+    <title>Blåhaj Café</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div class="pfpdiv">
             <img class="pfp" src="assets/pfp.webp" height="240" alt="Server image">
             <div class="bio">
-                <h1>Welcome to <span style="color: rgb(255, 131, 249);"><bold>Blåhaj café</bold></span>!</h1>
+                <h1>Welcome to <span style="color: rgb(255, 131, 249);"><bold>Blåhaj Café</bold></span>!</h1>
             </div>
         </div>
     </div>
