Add font and update bio text

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <img class="pfp" src="assets/pfp.webp" height="240" alt="Server image">
             <div class="bio">
                 <h1>Welcome to <span style="color: rgb(255, 131, 249);"><bold>Blåhaj Café</bold></span>!</h1>
+                <p style="font-family: homemade_appleregular;">Come and take a seat</p>
             </div>
         </div>
     </div>
