--- a/index.html
+++ b/index.html
@@ -12,9 +12,13 @@
         <div class="pfpdiv">
             <img class="pfp" src="assets/pfp.webp" height="240" alt="Server image">
             <div class="bio">
-                <h1>Welcome to <span style="color: rgb(255, 131, 249);"><bold>Blåhaj Café</bold></span>!</h1>
+                <h1>Welcome to <span style="color: #dbc1ac;"><bold>Blåhaj Café</bold></span>!</h1>
                 <p style="font-family: homemade_appleregular;">Come and take a seat!~</p>
             </div>
+        </div>
+        <br>
+        <div class="boxes">
+            zefzefzefe
         </div>
     </div>
 </body>
