--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blåhaj Café</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/pfp.webp">
+    <meta name="description" content="Welcome to Blåhaj Café! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco">
+    <meta name="image" content="https://girldick.estrogen.monster/assets/pfp.webp">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="Blåhaj Café">
+    <meta itemprop="description" content="Welcome to Blåhaj Café! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco">
+    <meta itemprop="image" content="https://girldick.estrogen.monster/assets/pfp.webp">
+    <meta name="og:title" content="Blåhaj Café">
+    <meta name="og:description" content="Welcome to Blåhaj Café! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco">
+    <meta name="og:image" content="https://girldick.estrogen.monster/assets/pfp.webp">
+    <meta name="og:url" content="https://girldick.estrogen.monster/">
+    <meta name="og:site_name" content="Blåhaj Café">
+    <meta name="og:locale" content="en_US">
+    <meta name="og:type" content="website">
 </head>
 <body>
     <div class="container">
