--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                 <button class="button" onclick="window.location.href='https://discord.gg/girldick'">Join us!</button>
             </div>
             <div class="boxes">
-                <p style="font-family: homemade_appleregular;">The server</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p style="font-family: homemade_appleregular;">Website under construction!!</p>
+                <p>Please wait until its done :33</p>
             </div>
             <div class="boxes" >
                 <p style="font-family: homemade_appleregular;">Join us!</p>
