Update iframe width to auto

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <div class="boxes" >
                 <p style="font-family: homemade_appleregular;">Join us!</p>
-                <iframe src="https://discord.com/widget?id=1027016571773788310&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                <iframe src="https://discord.com/widget?id=1027016571773788310&theme=dark" width="auto" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </div>
             <div class="boxes">
                 <p style="font-family: homemade_appleregular;">The server</p>
