--- a/index.html
+++ b/index.html
@@ -40,16 +40,22 @@
                 <button class="button" onclick="window.location.href='https://discord.gg/girldick'">Join us!</button>
             </div>
             <div class="boxes">
-                <p style="font-family: homemade_appleregular;">Website under construction!!</p>
-                <p>Please wait until its done :33</p>
+                <p style="font-family: homemade_appleregular;">Server news</p>
+                <p>Website in construction!!! Please wait until its done :3</p>
             </div>
             <div class="boxes" >
                 <p style="font-family: homemade_appleregular;">Join us!</p>
                 <iframe src="https://discord.com/widget?id=1027016571773788310&theme=dark" width="auto" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </div>
             <div class="boxes">
-                <p style="font-family: homemade_appleregular;">The server</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p style="font-family: homemade_appleregular;">Trans rights!</p>
+                <div class="containertrans">
+                    <div id="blue"></div>
+                    <div id="pink"></div>
+                    <div id="white"></div>
+                    <div id="pink"></div>
+                    <div id="blue"></div>
+                </div>
             </div>
             <div class="boxes">
                 <p style="font-family: homemade_appleregular;">The server</p>
