Fix Discord iframe styling

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="boxes" >
                 <p style="font-family: homemade_appleregular;">Join us!</p>
-                <iframe src="https://discord.com/widget?id=1027016571773788310&theme=dark" width="auto" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+                <iframe class="discord" src="https://discord.com/widget?id=1027016571773788310&theme=dark" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </div>
             <div class="boxes">
                 <p style="font-family: homemade_appleregular;">Trans rights!</p>
