Update staff team information

--- a/index.html
+++ b/index.html
@@ -58,11 +58,20 @@
                 </div>
             </div>
             <div class="boxes">
-                <p style="font-family: homemade_appleregular;">The server</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p style="font-family: homemade_appleregular;">The staff team</p>
+                <p>Say smth like our staff team is here to help u if anything blah blah blah</p>
+                <br>
+                <p>~The Founder:~</p>
+                <p>foxuccino</p>
+                <br>
+                <p>~The Administrators:~</p>
+                <p>saulgoodman1945, lonelycolors, unsalted_fry, raingayming, mckenna., mopii.</p>
+                <br>
+                <p>~The Moderators:~</p>
+                <p>santerina, humvcat, paxi_ss</p>
             </div>
             <div class="boxes">
-                <p style="font-family: homemade_appleregular;">The server</p>
+                <p style="font-family: homemade_appleregular;">no idea what to put here lol</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
         </div>
