Update staff team in index.html

--- a/index.html
+++ b/index.html
@@ -60,15 +60,14 @@
             <div class="boxes">
                 <p style="font-family: homemade_appleregular;">The staff team</p>
                 <p>Say smth like our staff team is here to help u if anything blah blah blah</p>
-                <br>
                 <p>~The Founder:~</p>
                 <p>foxuccino</p>
-                <br>
                 <p>~The Administrators:~</p>
                 <p>saulgoodman1945, lonelycolors, unsalted_fry, raingayming, mckenna., mopii.</p>
-                <br>
                 <p>~The Moderators:~</p>
                 <p>santerina, humvcat, paxi_ss</p>
+                <p>~The Jr. Moderators:~</p>
+                <p>natsunemimi, gothgirlpengu, solarnovav, notkira.</p>
             </div>
             <div class="boxes">
                 <p style="font-family: homemade_appleregular;">no idea what to put here lol</p>
