--- a/index.html
+++ b/index.html
@@ -29,26 +29,26 @@
             <img class="pfp" src="assets/pfp.webp" height="240" alt="Server image">
             <div class="bio">
                 <h1>Welcome to <span style="color: #dbc1ac !important;"><bold>Blåhaj Café</bold></span>!</h1>
-                <p style="font-family: homemade_appleregular;">Come and take a seat!~</p>
+                <h4 style="font-family: homemade_appleregular;">Come and take a seat!~</h4>
             </div>
         </div>
         <br>
         <div class="boxes-container">
             <div class="boxes" >
-                <p style="font-family: homemade_appleregular;">Join us!</p>
+                <h3 style="font-family: homemade_appleregular;">Join us!</h3>
                 <iframe class="discord" src="https://discord.com/widget?id=1027016571773788310&theme=dark" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </div>
             <div class="boxes">
-                <p style="font-family: homemade_appleregular;">Server news</p>
+                <h3 style="font-family: homemade_appleregular;">Server news</3>
                 <p>Website in construction!!! Please wait until its done :3</p>
             </div>
             <div class="boxes">
-                <p style="font-family: homemade_appleregular;">The server</p>
+                <h3 style="font-family: homemade_appleregular;">The server</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                 <button class="button" onclick="window.location.href='https://discord.gg/girldick'">Join us!</button>
             </div>
             <div class="boxes">
-                <p style="font-family: homemade_appleregular;">Trans rights!</p>
+                <h3 style="font-family: homemade_appleregular;">Trans rights!</h3>
                 <div class="containertrans">
                     <div id="blue"></div>
                     <div id="pink"></div>
@@ -58,7 +58,7 @@
                 </div>
             </div>
             <div class="boxes">
-                <p style="font-family: homemade_appleregular;">The staff team</p>
+                <h3 style="font-family: homemade_appleregular;">The staff team</h3>
                 <p>Say smth like our staff team is here to help u if anything blah blah blah</p>
                 <p>~The Founder:~</p>
                 <p>foxuccino</p>
@@ -70,7 +70,7 @@
                 <p>natsunemimi, gothgirlpengu, solarnovav, notkira.</p>
             </div>
             <div class="boxes">
-                <p style="font-family: homemade_appleregular;">no idea what to put here lol</p>
+                <h3 style="font-family: homemade_appleregular;">no idea what to put here lol</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
         </div>
