Fix typo in server news heading

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <iframe class="discord" src="https://discord.com/widget?id=1027016571773788310&theme=dark" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             </div>
             <div class="boxes">
-                <h3 style="font-family: homemade_appleregular;">Server news</3>
+                <h3 style="font-family: homemade_appleregular;">Server news</h3>
                 <p>Website in construction!!! Please wait until its done :3</p>
             </div>
             <div class="boxes">
