Add snowflake animation to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,44 @@
     <meta content="#dbc1ac" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
-    <body>
+    <div class="snowflakes" aria-hidden="true">
+        <div class="snowflake">
+        ❅
+        </div>
+        <div class="snowflake">
+        ❆
+        </div>
+        <div class="snowflake">
+        ❅
+        </div>
+        <div class="snowflake">
+        ❆
+        </div>
+        <div class="snowflake">
+        ❅
+        </div>
+        <div class="snowflake">
+        ❆
+        </div>
+        <div class="snowflake">
+          ❅
+        </div>
+        <div class="snowflake">
+          ❆
+        </div>
+        <div class="snowflake">
+          ❅
+        </div>
+        <div class="snowflake">
+          ❆
+        </div>
+        <div class="snowflake">
+          ❅
+        </div>
+        <div class="snowflake">
+          ❆
+        </div>
+      </div>
     <div class="container">
         <div class="pfpdiv">
             <img class="pfp" src="assets/pfp.webp" height="240" alt="Server image">
