Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -107,8 +107,22 @@
                 <p>natsunemimi, gothgirlpengu, solarnovav, notkira.</p>
             </div>
             <div class="boxes">
-                <h3 style="font-family: homemade_appleregular;">no idea what to put here lol</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <img src="assets/cute.gif" alt="cute gif :3">
+            </div>
+            <div class="boxes">
+              <h3 style="font-family: homemade_appleregular;">Tone tags</h3>
+              <p>Here's a non exhaustive list of tone tags:</p>
+              <p>/j = joking</p>
+              <p>/s = sarcasm</p>
+              <p>/hj = half joking</p>
+              <p>/srs = serious</p>
+              <p>/lh = light hearted</p>
+              <p>/gen = genuine</p>
+              <p>/pos = positive</p>
+              <p>/neg = negative</p>
+              <form action="https://tone-tag-list.carrd.co/#masterlist" method="get" target="_blank">
+                <button class="button" type="submit">More tone tags</button>
+              </form>
             </div>
         </div>
     </div>
