--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <p>natsunemimi, gothgirlpengu, solarnovav, notkira.</p>
             </div>
             <div class="boxes">
-              <img src="assets/cute.gif" alt="cute gif :3">
+              <img src="assets/cute.gif" style="border-radius: 15px;" alt="cute gif :3">
             </div>
             <div class="boxes">
               <h3 style="font-family: homemade_appleregular;">Tone tags</h3>
