--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
       <title>Blåhaj Café</title>
       <link rel="stylesheet" href="style.css">
       <link rel="icon" href="assets/pfp.webp">
-      <meta name="description" content="Welcome to Blåhaj Café! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco">
+      <meta name="description" content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
       <meta name="image" content="https://girldick.estrogen.monster/assets/pfp.webp">
       <!-- Schema.org for Google -->
       <meta itemprop="name" content="Blåhaj Café">
-      <meta itemprop="description" content="Welcome to Blåhaj Café! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco">
+      <meta itemprop="description" content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
       <meta itemprop="image" content="https://girldick.estrogen.monster/assets/pfp.webp">
       <meta name="og:title" content="Blåhaj Café">
-      <meta name="og:description" content="Welcome to Blåhaj Café! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco">
+      <meta name="og:description" content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
       <meta name="og:image" content="https://girldick.estrogen.monster/assets/pfp.webp">
       <meta name="og:url" content="https://girldick.estrogen.monster/">
       <meta name="og:site_name" content="Blåhaj Café">
@@ -23,6 +23,25 @@
       <meta content="#dbc1ac" data-react-helmet="true" name="theme-color" />
   </head>
   <body>
+    <script>
+      // Fetch the JSON file
+      fetch('http://localhost:3122/news.json')
+        .then(response => response.json()) // Parse it as JSON
+        .then(data => {
+          // Access the content and time properties
+          let content = data[0].content;
+          const time = new Date(data[0].time).toLocaleString();
+
+          // Cut the message if it exceeds 500 characters
+          if (content.length > 500) {
+            content = content.substring(0, 500) + '...';
+          }
+
+          // Update the HTML content
+          document.querySelector('.news').textContent = `${content} (Posted on ${time})`;
+        })
+        .catch(error => console.error('Error:', error));
+    </script>
       <div class="snowflakes" aria-hidden="true">
           <div class="snowflake">
           ❅
@@ -61,6 +80,7 @@
             ❆
           </div>
         </div>
+        
       <div class="container">
           <div class="pfpdiv">
               <img class="pfp" src="assets/pfp.webp" height="240" alt="Server image">
@@ -77,11 +97,13 @@
               </div>
               <div class="boxes">
                   <h3 style="font-family: homemade_appleregular;">Server news</h3>
-                  <p>Website in construction!!! Please wait until its done :3</p>
+                  <p class="news">Loading...</p>
               </div>
               <div class="boxes">
                   <h3 style="font-family: homemade_appleregular;">The server</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                  <h4>Welcome to ୨ ☕ Blåhaj Café 🥞୧!!!</h4>
+                  <p>We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here</p>
+                  <h4>• Blåhaj Café Staff</h4>
                   <button class="button" onclick="window.location.href='https://discord.gg/girldick'">Join us!</button>
               </div>
               <div class="boxes">
@@ -96,15 +118,15 @@
               </div>
               <div class="boxes">
                   <h3 style="font-family: homemade_appleregular;">The staff team</h3>
-                  <p>Say smth like our staff team is here to help u if anything blah blah blah</p>
-                  <p>~The Founder:~</p>
-                  <p>foxuccino</p>
-                  <p>~The Administrators:~</p>
-                  <p>saulgoodman1945, lonelycolors, unsalted_fry, raingayming, mckenna., mopii.</p>
-                  <p>~The Moderators:~</p>
-                  <p>santerina, humvcat, paxi_ss</p>
-                  <p>~The Jr. Moderators:~</p>
-                  <p>natsunemimi, gothgirlpengu, solarnovav, notkira.</p>
+                  <h4>Here is each role on our staff team, and how they are here to help you!</h4>
+                  <p>~The Founder~</p>
+                  <p>Creator of the server, report instances of admin abuse or server recommendations to her</p>
+                  <p>~The Administrators~</p>
+                  <p>High level staff who oversee all other mods and have high level permissions on the server, escalate matters to them if necessary</p>
+                  <p>~The Moderators~</p>
+                  <p>People who are usually responsible for banning people who joined that are trolls, mediating chats, etc., usually you want to address any concerns with them first</p>
+                  <p>~The Jr. Moderators~</p>
+                  <p>Entry level stuff who sift through chat to make sure people follow rules, they do not have permissions to ban people so contact higher level staff for ban concerns</p>
               </div>
               <div class="boxes">
                 <img src="assets/cute.gif" style="border-radius: 15px;" alt="cute gif :3">
