Remove unused font files and update font references

--- a/index.html
+++ b/index.html
@@ -92,22 +92,22 @@
           <br>
           <div class="boxes-container">
               <div class="boxes" >
-                  <h3 style="font-family: homemade_appleregular;">Join us!</h3>
+                  <h1 style="font-family: _i_love_glitterregular;">Join us!</h1>
                   <iframe class="discord" src="https://discord.com/widget?id=1027016571773788310&theme=dark" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
               </div>
               <div class="boxes">
-                  <h3 style="font-family: homemade_appleregular;">Server news</h3>
+                  <h1 style="font-family: _i_love_glitterregular;">Server news</h1>
                   <p class="news">Loading...</p>
               </div>
               <div class="boxes">
-                  <h3 style="font-family: homemade_appleregular;">The server</h3>
+                  <h1 style="font-family: _i_love_glitterregular;">The server</h1>
                   <h4>Welcome to ୨ ☕ Blåhaj Café 🥞୧!!!</h4>
                   <p>We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here</p>
                   <h4>• Blåhaj Café Staff</h4>
                   <button class="button" onclick="window.location.href='https://discord.gg/girldick'">Join us!</button>
               </div>
               <div class="boxes">
-                  <h3 style="font-family: homemade_appleregular;">Trans rights!</h3>
+                  <h1 style="font-family: _i_love_glitterregular;">Trans rights!</h1>
                   <div class="containertrans">
                       <div id="blue"></div>
                       <div id="pink"></div>
@@ -117,7 +117,7 @@
                   </div>
               </div>
               <div class="boxes">
-                  <h3 style="font-family: homemade_appleregular;">The staff team</h3>
+                  <h1 style="font-family: _i_love_glitterregular;">The staff team</h1>
                   <h4>Here is each role on our staff team, and how they are here to help you!</h4>
                   <p>~The Founder~</p>
                   <p>Creator of the server, report instances of admin abuse or server recommendations to her</p>
@@ -132,7 +132,7 @@
                 <img src="assets/cute.gif" style="border-radius: 15px;" alt="cute gif :3">
               </div>
               <div class="boxes">
-                <h3 style="font-family: homemade_appleregular;">Tone tags</h3>
+                <h1 style="font-family: _i_love_glitterregular;">Tone tags</h1>
                 <p>Here's a non exhaustive list of tone tags:</p>
                 <p>/j = joking</p>
                 <p>/s = sarcasm</p>
