--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
               </div>
               <div class="boxes">
                   <h1 style="font-family: _i_love_glitterregular;">Server news</h1>
+                  <h4>Here's the last ping from the server in the announcements channel!</h4>
                   <p class="news">Loading...</p>
               </div>
               <div class="boxes">
