Remove unnecessary text from server news

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </div>
               <div class="boxes">
                   <h1 style="font-family: _i_love_glitterregular;">Server news</h1>
-                  <h4>Here's the last ping from the server in the announcements channel! (hasnt been implemented yet but will very soon!)</h4>
+                  <h4>Here's the last ping from the server in the announcements channel!</h4>
                   <p class="news">Loading...</p>
               </div>
               <div class="boxes">
