Update Discord and news elements in index.html

--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
     <div class="boxes-container">
       <div class="boxes">
         <h1 style="font-family: _i_love_glitterregular;">Join us!</h1>
-        <iframe class="discord" src="https://discord.com/widget?id=1027016571773788310&theme=dark" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+        <iframe class="discord" src="https://discord.com/widget?id=1027016571773788310&theme=dark" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" aria-label="Discord server"></iframe>
       </div>
       <div class="boxes">
         <h1 style="font-family: _i_love_glitterregular;">Server news</h1>
         <h4>Here's the last ping from the server in the announcements channel!</h4>
-        <p class="news">Loading...</p>
-        <img src="" style="width: 40px; height: 40px; border-radius: 40px;" class="pfpnews">
+        <p class="news" aria-live="polite">Loading...</p>
+        <img src="" style="width: 40px; height: 40px; border-radius: 40px;" class="pfpnews" alt="News sender profile picture">
       </div>
       <div class="boxes">
         <h1 style="font-family: _i_love_glitterregular;">The server</h1>
@@ -157,7 +157,7 @@
         <p>/pos = positive</p>
         <p>/neg = negative</p>
         <form action="https://tone-tag-list.carrd.co/#masterlist" method="get" target="_blank">
-          <button class="button" aria-label="Open the tone tagsd website" type="submit">More tone tags</button>
+          <button class="button" aria-label="Open the tone tags website" type="submit">More tone tags</button>
         </form>
       </div>
     </div>
