Update Discord server link

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <h4>Welcome to ୨ ☕ Blåhaj Café 🥞୧!!!</h4>
         <p>We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here</p>
         <h4>• Blåhaj Café Staff</h4>
-        <button class="button" aria-label="Join the discord server" onclick="window.location.href='https://discord.gg/girldick'">Join us!</button>
+        <button class="button" aria-label="Join the discord server" onclick="window.location.href='https://discord.gg/57N7gZXDKx'">Join us!</button>
       </div>
       <div class="boxes">
         <h1 style="font-family: _i_love_glitterregular;">Trans rights!</h1>
