--- a/index.html
+++ b/index.html
@@ -120,11 +120,11 @@
       <div class="boxes">
         <h1 style="font-family: _i_love_glitterregular;">Trans rights!</h1>
         <div class="containertrans">
-          <div id="blue"></div>
+          <div id="blue" style="border-radius: 16px 16px 0px 0px;"></div>
           <div id="pink"></div>
           <div id="white"></div>
           <div id="pink"></div>
-          <div id="blue"></div>
+          <div id="blue" style="border-radius: 0px 0px 16px 16px;"></div>
         </div>
       </div>
       <div class="boxes">
