Fix typo in index.html

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <p>~The Moderators~</p>
         <p>People who are usually responsible for banning people who joined that are trolls, mediating chats, etc., usually you want to address any concerns with them first</p>
         <p>~The Jr. Moderators~</p>
-        <p>Entry level stuff who sift through chat to make sure people follow rules, they do not have permissions to ban people so contact higher level staff for ban concerns</p>
+        <p>Entry level staff who sift through chat to make sure people follow rules, they do not have permissions to ban people so contact higher level staff for ban concerns</p>
       </div>
       <div class="boxes">
         <img src="assets/cute.gif" style="border-radius: 15px;" alt="cute gif :3">
