Update meta descriptions and formatting in index.html

--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blåhaj Café</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="assets/pfp.webp">
-  <meta name="description" content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
+  <meta name="description"
+    content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
   <meta name="image" content="https://girldick.estrogen.monster/assets/pfp.webp">
   <meta itemprop="name" content="Blåhaj Café">
-  <meta itemprop="description" content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
+  <meta itemprop="description"
+    content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
   <meta itemprop="image" content="https://girldick.estrogen.monster/assets/pfp.webp">
   <meta name="og:title" content="Blåhaj Café">
-  <meta name="og:description" content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
+  <meta name="og:description"
+    content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
   <meta name="og:image" content="https://girldick.estrogen.monster/assets/pfp.webp">
   <meta name="og:url" content="https://girldick.estrogen.monster/">
   <meta name="og:site_name" content="Blåhaj Café">
@@ -20,6 +24,7 @@
   <meta name="og:type" content="website">
   <meta content="#dbc1ac" data-react-helmet="true" name="theme-color" />
 </head>
+
 <body>
   <script>
     let timeoutId;
@@ -94,7 +99,9 @@
     <div class="pfpdiv">
       <img class="pfp" src="assets/pfp.webp" height="240" alt="Server image">
       <div class="bio">
-        <h1>Welcome to <span style="color: #dbc1ac !important;"><bold>Blåhaj Café</bold></span>!</h1>
+        <h1>Welcome to <span style="color: #dbc1ac !important;">
+            <bold>Blåhaj Café</bold>
+          </span>!</h1>
         <h4 style="font-family: homemade_appleregular;">Come and take a seat!~</h4>
       </div>
     </div>
@@ -102,20 +109,28 @@
     <div class="boxes-container">
       <div class="boxes">
         <h1 style="font-family: _i_love_glitterregular;">Join us!</h1>
-        <iframe class="discord" src="https://discord.com/widget?id=1027016571773788310&theme=dark" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts" aria-label="Discord server"></iframe>
+        <iframe class="discord" src="https://discord.com/widget?id=1027016571773788310&theme=dark"
+          allowtransparency="true" frameborder="0"
+          sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
+          aria-label="Discord server"></iframe>
       </div>
       <div class="boxes">
         <h1 style="font-family: _i_love_glitterregular;">Server news</h1>
         <h4>Here's the last ping from the server in the announcements channel!</h4>
         <p class="news" aria-live="polite">Loading...</p>
-        <img src="" style="width: 40px; height: 40px; border-radius: 40px;" class="pfpnews" alt="News sender profile picture">
+        <img src="" style="width: 40px; height: 40px; border-radius: 40px;" class="pfpnews"
+          alt="News sender profile picture">
       </div>
       <div class="boxes">
         <h1 style="font-family: _i_love_glitterregular;">The server</h1>
         <h4>Welcome to ୨ ☕ Blåhaj Café 🥞୧!!!</h4>
-        <p>We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here</p>
+        <p>We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a
+          safe space for many people without the negativity and mod abuse of many online communities. We have many
+          active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots,
+          and active moderation. Come and take a seat, we hope you like it here</p>
         <h4>• Blåhaj Café Staff</h4>
-        <button class="button" aria-label="Join the discord server" onclick="window.location.href='https://discord.gg/57N7gZXDKx'">Join us!</button>
+        <button class="button" aria-label="Join the discord server"
+          onclick="window.location.href='https://discord.gg/57N7gZXDKx'">Join us!</button>
       </div>
       <div class="boxes">
         <h1 style="font-family: _i_love_glitterregular;">Trans rights!</h1>
@@ -133,11 +148,14 @@
         <p>~The Founder~</p>
         <p>Creator of the server, report instances of admin abuse or server recommendations to her</p>
         <p>~The Administrators~</p>
-        <p>High level staff who oversee all other mods and have high level permissions on the server, escalate matters to them if necessary</p>
+        <p>High level staff who oversee all other mods and have high level permissions on the server, escalate matters
+          to them if necessary</p>
         <p>~The Moderators~</p>
-        <p>People who are usually responsible for banning people who joined that are trolls, mediating chats, etc., usually you want to address any concerns with them first</p>
+        <p>People who are usually responsible for banning people who joined that are trolls, mediating chats, etc.,
+          usually you want to address any concerns with them first</p>
         <p>~The Jr. Moderators~</p>
-        <p>Entry level staff who sift through chat to make sure people follow rules, they do not have permissions to ban people so contact higher level staff for ban concerns</p>
+        <p>Entry level staff who sift through chat to make sure people follow rules, they do not have permissions to ban
+          people so contact higher level staff for ban concerns</p>
       </div>
       <div class="boxes">
         <img src="assets/cute.gif" style="border-radius: 16px;" alt="cute gif :3">
@@ -159,6 +177,7 @@
       </div>
     </div>
   </div>
-  
+
 </body>
+
 </html>
