Update meta descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="assets/pfp.webp">
   <meta name="description"
-    content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
+    content="We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.">
   <meta name="image" content="https://girldick.estrogen.monster/assets/pfp.webp">
   <meta itemprop="name" content="Blåhaj Café">
   <meta itemprop="description"
-    content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
+    content="We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.">
   <meta itemprop="image" content="https://girldick.estrogen.monster/assets/pfp.webp">
   <meta name="og:title" content="Blåhaj Café">
   <meta name="og:description"
-    content="Welcome to Blåhaj Café! We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.  We have many active channels, fun stickers and emojis, active voice channels, a leveling system, NSFW channels, music bots, and active moderation. Come and take a seat, we hope you like it here">
+    content="We are an LGBTQ Friendly, Furry Friendly, and Neurodivergent Friendly server who's main goal is to act as a safe space for many people without the negativity and mod abuse of many online communities.">
   <meta name="og:image" content="https://girldick.estrogen.monster/assets/pfp.webp">
   <meta name="og:url" content="https://girldick.estrogen.monster/">
   <meta name="og:site_name" content="Blåhaj Café">
