--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       </div>
       <div class="boxes">
         <h1 style="font-family: _i_love_glitterregular;">Appeal a ban</h1>
-        <p>Fill out this form to appeal a ban:</p>
+        <p>Fill out this form to appeal a ban. Please not that this form is not guaranteed to get you unbanned.:</p>
         <iframe src="https://onm6yd715wq.typeform.com/to/asi5xX9E" style="border:none;" width="100%" height="600px"
           frameborder="10" marginheight="0" marginwidth="0">Loading…</iframe>
       </div>
