--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
         <h1 style="font-family: _i_love_glitterregular;">Server news</h1>
         <h4>Here's the last ping from the server in the announcements channel!</h4>
         <p class="news" aria-live="polite">Loading...</p>
-        <img src="" style="width: 40px; height: 40px; border-radius: 40px;" class="pfpnews"
-          alt="News sender profile picture">
+        <img src="" style="width: 40px; height: 40px; border-radius: 40px;" class="pfpnews" alt="News sender profile picture">
       </div>
       <div class="boxes">
         <h1 style="font-family: _i_love_glitterregular;">The server</h1>
